--- a/Dockerfile-countries
+++ b/Dockerfile-countries
@@ -4,12 +4,13 @@ FROM openjdk:8-jre-alpine
 # set maintainer
 LABEL maintainer "itsNotMyCode"
 
-# set a health check
-HEALTHCHECK --interval=5s \
-            --timeout=300s \
-            CMD curl -f http://127.0.0.1:8080/health/live || exit 1
-
 RUN wget https://s3-eu-west-1.amazonaws.com/devops-assesment/countries-assembly-1.0.1.jar
+RUN ['apk', 'add', 'curl']
+
+HEALTHCHECK --interval=15s \
+            --retries=20 \
+          CMD curl -f http://127.0.0.1:8080/health/ready
+
 EXPOSE 8080/tcp
 # run application with this command line
 CMD ["/usr/bin/java", "-jar", "countries-assembly-1.0.1.jar"]
