--- a/Dockerfile-countries
+++ b/Dockerfile-countries
@@ -5,7 +5,7 @@ FROM openjdk:8-jre-alpine
 LABEL maintainer "itsNotMyCode"
 
 RUN wget https://s3-eu-west-1.amazonaws.com/devops-assesment/countries-assembly-1.0.1.jar
-RUN ['apk', 'add', 'curl']
+RUN apk add curl
 
 HEALTHCHECK --interval=15s \
             --retries=20 \
