--- a/deploy_airports.yml
+++ b/deploy_airports.yml
@@ -1,14 +1,18 @@
-version: "3.2"
+version: "3.7"
 services:
   airports:
+    labels:
+      com.docker.stack.namespace: "huuuuuuuuuuuuuuuuuj"
     image: lamersons/airports-assembly:${RELEASE}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1:8080/health/ready"]
       # start_period: 30s
-      interval: 5s
-      timeout: 10s
+      interval: 15s
+      # timeout: 10s
       retries: 20
     deploy:
+      labels:
+        com.docker.stack.namespace: "huuuuuuuuuuuuuuuuuj1"
       replicas: 3
       restart_policy:
         condition: on-failure
@@ -20,6 +24,7 @@ services:
 
 networks:
   airports_overlay:
+    name: airports
     driver: "overlay"
     attachable: true
     internal: true
