--- a/deploy_nginx.yml
+++ b/deploy_nginx.yml
@@ -1,4 +1,4 @@
-version: "3.2"
+version: "3.7"
 services:
   nginx:
     image: nginx
@@ -9,6 +9,8 @@ services:
         source: /hosthome/shared_drive/nginx/conf
         target: /etc/nginx
     deploy:
+      labels:
+        com.docker.stack.namespace: nginx
       replicas: 2
       # restart_policy:
       #   condition: on-failure
@@ -20,6 +22,7 @@ services:
 
 networks:
   countries_overlay:
+    name: countries
     driver: "overlay"
     attachable: true
     internal: true
@@ -27,6 +30,7 @@ networks:
      config:
        - subnet: 10.11.0.0/16
   airports_overlay:
+    name: airports
     driver: "overlay"
     attachable: true
     internal: true
