--- a/deploy_airports.yml
+++ b/deploy_airports.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 services:
   airports:
-    labels:
-      com.docker.stack.namespace: "huuuuuuuuuuuuuuuuuj"
+    # labels:
+    #   com.docker.stack.namespace: "watafack"
     image: lamersons/airports-assembly:${RELEASE}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1:8080/health/ready"]
@@ -11,23 +11,24 @@ services:
       # timeout: 10s
       retries: 20
     deploy:
-      labels:
-        com.docker.stack.namespace: "huuuuuuuuuuuuuuuuuj1"
       replicas: 3
       restart_policy:
         condition: on-failure
         delay: 5s
-        max_attempts: 3
+        max_attempts: 30
         window: 120s
     networks:
-      - "airports_overlay"
-
+      - "default"
 networks:
-  airports_overlay:
-    name: airports
-    driver: "overlay"
-    attachable: true
-    internal: true
-    ipam:
-     config:
-       - subnet: 10.12.0.0/16
+    default:
+        external:
+            name: airports
+# networks:
+#   airports_overlay:
+#     name: airports
+    # driver: "overlay"
+    # attachable: true
+    # internal: true
+    # ipam:
+    #  config:
+    #    - subnet: 10.12.0.0/16
