--- a/deploy_countries.yml
+++ b/deploy_countries.yml
@@ -15,17 +15,23 @@ services:
       restart_policy:
         condition: on-failure
         delay: 5s
-        max_attempts: 3
+        max_attempts: 30
         window: 120s
     networks:
-      - "countries_overlay"
-
+      - "default"
 networks:
-  countries_overlay:
-    name: countries
-    driver: "overlay"
-    attachable: true
-    internal: true
-    ipam:
-     config:
-       - subnet: 10.11.0.0/16
+    default:
+        external:
+            name: countries
+#     networks:
+#       - "countries_overlay"
+#
+# networks:
+#   countries_overlay:
+#     name: countries
+#     driver: "overlay"
+#     attachable: true
+#     internal: true
+#     ipam:
+#      config:
+#        - subnet: 10.11.0.0/16
