--- a/deploy_countries.yml
+++ b/deploy_countries.yml
@@ -3,7 +3,7 @@
 # deps: docker-compose > 3.5
 # Author: MiZo <misha3@gmail.com>
 #
-# Lunatech DevOps challange
+# Lunatech DevOps challenge
 #
 ##############################################################################
 
